xidlc/tests/snapshots/codegen_snapshot__rust__struct_skip.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_skip.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct SkipStruct {
    pub a: i32,
    #[serde(skip)]
    pub b: i32,
    pub c: i32,
}
impl SkipStruct {}
