xidlc/tests/snapshots/codegen_snapshot__rust__template_module_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
template_module_dcl.rs
===============
// Code generated by xidlc-v0.80.1-dc38446f. DO NOT EDIT.
