xidlc/tests/snapshots/codegen_snapshot__rust__union_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
assertion_line: 105
expression: output
---
===============
union_dcl.rs
===============
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]
pub struct B {
    tag: i32,
    data: BData,
}
union BData {}
impl Drop for B {
    fn drop(&mut self) {
        match self.tag {}
    }
}
impl B {
    pub fn tag(&self) -> &i32 {
        &self.tag
    }
}
pub struct C {
    tag: i32,
    data: CData,
}
union CData {
    a: core::mem::ManuallyDrop<i32>,
    b: core::mem::ManuallyDrop<String>,
}
impl Drop for C {
    fn drop(&mut self) {
        match self.tag {
            0 => {
                unsafe {
                    core::mem::ManuallyDrop::drop(&mut self.data.a);
                }
            }
            1 => {
                unsafe {
                    core::mem::ManuallyDrop::drop(&mut self.data.b);
                }
            }
        }
    }
}
impl C {
    pub fn new_a(value: i32) -> Self {
        Self {
            tag: 0,
            data: CData {
                a: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_a(&self) -> bool {
        matches!(self.tag, 0)
    }
    pub fn as_a(&self) -> &i32 {
        debug_assert!(self.is_a());
        unsafe { &self.data.a }
    }
    pub fn as_a_mut(&mut self) -> &mut i32 {
        debug_assert!(self.is_a());
        unsafe { &mut self.data.a }
    }
    pub fn into_a(self) -> i32 {
        debug_assert!(self.is_a());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.a)
        }
    }
    pub fn new_b(value: String) -> Self {
        Self {
            tag: 1,
            data: CData {
                b: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_b(&self) -> bool {
        matches!(self.tag, 1)
    }
    pub fn as_b(&self) -> &String {
        debug_assert!(self.is_b());
        unsafe { &self.data.b }
    }
    pub fn as_b_mut(&mut self) -> &mut String {
        debug_assert!(self.is_b());
        unsafe { &mut self.data.b }
    }
    pub fn into_b(self) -> String {
        debug_assert!(self.is_b());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.b)
        }
    }
    pub fn tag(&self) -> &i32 {
        &self.tag
    }
}
impl Default for C {
    fn default() -> Self {
        Self {
            tag: 0,
            data: CData {
                a: core::mem::ManuallyDrop::new(i32::default()),
            },
        }
    }
}
