xidlc/tests/snapshots/codegen_snapshot__rust__union_default_case.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
union_default_case.rs
===============
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(
    Debug,
    Clone,
    PartialEq,
    ::serde::Serialize,
    ::serde::Deserialize,
    Copy,
    Eq,
    Default,
)]
pub enum Tag {
    #[default]
    A,
    B,
}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
pub struct DefaultUnion {
    tag: Tag,
    data: DefaultUnionData,
}
union DefaultUnionData {
    a: core::mem::ManuallyDrop<int>,
    fallback: core::mem::ManuallyDrop<String>,
}
impl Drop for DefaultUnion {
    fn drop(&mut self) {
        if matches!(self.tag, A) {
            unsafe {
                core::mem::ManuallyDrop::drop(&mut self.data.a);
            }
        } else {
            unsafe {
                core::mem::ManuallyDrop::drop(&mut self.data.fallback);
            }
        }
    }
}
impl Clone for DefaultUnion {
    fn clone(&self) -> Self {
        if matches!(self.tag, A) {
            Self::new_a(self.as_a().clone())
        } else {
            Self::new_fallback(self.as_fallback().clone())
        }
    }
}
impl core::fmt::Debug for DefaultUnion {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        let mut d = f.debug_struct("DefaultUnion");
        d.field("tag", &self.tag);
        if matches!(self.tag, A) {
            d.field("a", self.as_a());
        } else {
            d.field("fallback", self.as_fallback());
        }
        d.finish()
    }
}
impl PartialEq for DefaultUnion {
    fn eq(&self, other: &Self) -> bool {
        if self.tag != other.tag {
            return false;
        }
        if matches!(self.tag, A) {
            self.as_a() == other.as_a()
        } else {
            self.as_fallback() == other.as_fallback()
        }
    }
}
impl DefaultUnion {
    pub fn new_a(value: int) -> Self {
        Self {
            tag: A,
            data: DefaultUnionData {
                a: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_a(&self) -> bool {
        matches!(self.tag, A)
    }
    pub fn as_a(&self) -> &int {
        debug_assert!(self.is_a());
        unsafe { &self.data.a }
    }
    pub fn as_a_mut(&mut self) -> &mut int {
        debug_assert!(self.is_a());
        unsafe { &mut self.data.a }
    }
    pub fn into_a(self) -> int {
        debug_assert!(self.is_a());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.a)
        }
    }
    pub fn new_fallback(value: String) -> Self {
        Self {
            tag: Tag::default(),
            data: DefaultUnionData {
                fallback: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_fallback(&self) -> bool {
        matches!(self.tag, _)
    }
    pub fn as_fallback(&self) -> &String {
        debug_assert!(self.is_fallback());
        unsafe { &self.data.fallback }
    }
    pub fn as_fallback_mut(&mut self) -> &mut String {
        debug_assert!(self.is_fallback());
        unsafe { &mut self.data.fallback }
    }
    pub fn into_fallback(self) -> String {
        debug_assert!(self.is_fallback());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.fallback)
        }
    }
    pub fn tag(&self) -> &Tag {
        &self.tag
    }
}
impl Default for DefaultUnion {
    fn default() -> Self {
        Self {
            tag: Tag::default(),
            data: DefaultUnionData {
                fallback: core::mem::ManuallyDrop::new(String::default()),
            },
        }
    }
}
#[derive(::serde::Serialize)]
struct DefaultUnionSerdeRef<'__a> {
    tag: &'__a str,
    data: DefaultUnionSerdeRefData<'__a>,
}
#[derive(::serde::Serialize)]
#[serde(untagged)]
enum DefaultUnionSerdeRefData<'__a> {
    Case0(&'__a int),
    Case1(&'__a String),
}
impl serde::Serialize for DefaultUnion {
    fn serialize<__S>(&self, __serializer: __S) -> Result<__S::Ok, __S::Error>
    where
        __S: serde::Serializer,
    {
        let helper = if matches!(self.tag, A) {
            let tag = "A";
            DefaultUnionSerdeRef {
                tag,
                data: DefaultUnionSerdeRefData::Case0(self.as_a()),
            }
        } else {
            let tag = "default";
            DefaultUnionSerdeRef {
                tag,
                data: DefaultUnionSerdeRefData::Case1(self.as_fallback()),
            }
        };
        helper.serialize(__serializer)
    }
}
#[derive(::serde::Deserialize)]
struct DefaultUnionSerdeOwned {
    tag: String,
    data: ::serde_json::Value,
}
impl<'de> serde::Deserialize<'de> for DefaultUnion {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        let helper = DefaultUnionSerdeOwned::deserialize(deserializer)?;
        match helper.tag.as_str() {
            "A" => {
                let value = ::serde_json::from_value::<int>(helper.data)
                    .map_err(|err| serde::de::Error::custom(
                        format!(
                            "union DefaultUnion payload decode failed for tag `A`: {err}"
                        ),
                    ))?;
                Ok(Self {
                    tag: A,
                    data: DefaultUnionData {
                        a: core::mem::ManuallyDrop::new(value),
                    },
                })
            }
            "default" => {
                let value = ::serde_json::from_value::<String>(helper.data)
                    .map_err(|err| serde::de::Error::custom(
                        format!(
                            "union DefaultUnion payload decode failed for tag `default`: {err}"
                        ),
                    ))?;
                Ok(Self {
                    tag: Tag::default(),
                    data: DefaultUnionData {
                        fallback: core::mem::ManuallyDrop::new(value),
                    },
                })
            }
            _ => {
                Err(
                    serde::de::Error::custom(
                        format!(
                            "union DefaultUnion tag/data mismatch for tag `{}`", helper
                            .tag
                        ),
                    ),
                )
            }
        }
    }
}
